--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/prtflo.css">
 </head>
-<body class="open-sans-normal">
-    <header>
+<body>
+    <header class="header">
         <nav>
             <h3 class="nav-title"><span class="text-primary">My Portfolio</span></h3>
-            <button>Signup</button>
+            <button class="btn-primary">Sign Up</button>
         </nav>
+        <div>
+            <h4>Cool Dark UI Template for <br>Webflow Agencies!</h4>
+            <button class="btn-primary">Stay Focused</button>
+        </div>
     </header>
     <main>
 
