--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
         </div>
     </header>
     <main>
-
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-title">See It in Action</h3>
+                <p class="banner-description">Explore the live preview and imagine your <br>brand in this bold new look.</p>
+                <button class="btn-primary">Launch Live Preview</button>
+            </div>
+            <img class="banner-image-1" src="Assets/wc-mini.png" alt="">
+        </div>
     </main>
     <footer>
 
