--- a/index.html
+++ b/index.html
@@ -29,6 +29,47 @@
             </div>
             <img class="banner-image-1" src="Assets/wc-mini.png" alt="">
         </div>
+
+    </main>
+    <main class="produtcs">
+        <div>
+            <img src="ui/productive_user.png" alt="">
+        </div>
+        <section class="section-designer">
+            <h3 class="section-title">What our users say</h3>
+            <div class="design-container">
+                <div class="design">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <h4 class="design-title">Loved by Designers</h4>
+                    <p class="design-description">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <img class="image-position" src="Assets/avatar.png" alt="">
+                </div>
+                <div class="design">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <h4 class="design-title">Loved by Designers</h4>
+                    <p class="design-description">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <img class="image-position" src="Assets/avatar.png" alt="">
+                </div>
+                <div class="design">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <h4 class="design-title">Loved by Designers</h4>
+                    <p class="design-description">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <img class="image-position" src="Assets/avatar.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
