--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <img src="Assets/icon-star.png" alt="">
                     <h4 class="design-title">Loved by Designers</h4>
                     <p class="design-description">This template instantly leveled up our presence.” – Studio Vertex</p>
-                    <img class="image-position" src="Assets/avatar.png" alt="">
+                    <img src="Assets/avatar.png" alt="">
                 </div>
                 <div class="design">
                     <img src="Assets/icon-star.png" alt="">
@@ -56,7 +56,7 @@
                     <img src="Assets/icon-star.png" alt="">
                     <h4 class="design-title">Loved by Designers</h4>
                     <p class="design-description">This template instantly leveled up our presence.” – Studio Vertex</p>
-                    <img class="image-position" src="Assets/avatar.png" alt="">
+                    <img src="Assets/avatar.png" alt="">
                 </div>
                 <div class="design">
                     <img src="Assets/icon-star.png" alt="">
@@ -66,13 +66,44 @@
                     <img src="Assets/icon-star.png" alt="">
                     <h4 class="design-title">Loved by Designers</h4>
                     <p class="design-description">This template instantly leveled up our presence.” – Studio Vertex</p>
-                    <img class="image-position" src="Assets/avatar.png" alt="">
+                    <img src="Assets/avatar.png" alt="">
                 </div>
+            </div>
+        </section>
+
+        <section class="image-button">
+            <div>
+                <h3 class="section-title">Ready to focus better</h3>
+                <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                <div>
+                <button class="btn-primary">Ger Started Free</button>
+
+                </div>
+                <div class="third-image">
+                    <img src="Assets/wc-big.png" alt="">
+                </div>
+                
+            </div>
+        </section>
+        <section class="form-list">
+            <div class="input-collumn">
+                <h2 class="input-title">Let’s Get in Touch</h2>
+            </div>
+            <div>
+                <form action="">
+                    <p>email</p>
+                    <input placeholder="example@gmail.com" type="email">
+                    <input placeholder="Full Name" type="text">
+                    <textarea placeholder="Write your message" name="" id="" cols="100" rows="5"></textarea>
+                    <button class="btn-primary">Get in Touch</button>
+                </form>
             </div>
         </section>
     </main>
     <footer>
-
+        <section>
+            
+        </section>
     </footer>
 </body>
 </html>
